[build-system]
requires = ["setuptools>=68", "cython>=3.0.0;python_version>='3.11.0'",
        "cython>=0.29.28;python_version<'3.11.0'", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ggwave"
version = "0.4.2"
authors = [{name = "Georgi Gerganov", email = "ggerganov@gmail.com"}]
license = {text = "MIT"}
description = "Tiny data-over-sound library."
keywords = [
    "data-over-sound",
    "fsk",
    "ecc",
    "serverless",
    "pairing",
    "qrcode",
    "ultrasound",
]
readme = "README.rst"
urls = {Homepage = "https://github.com/ggerganov/ggwave"}

[tool.setuptools]
include-package-data = false
